syntax = "proto3";
package types;

// message for retrieve start
message RetrievePara {
    string defaultAddress = 1;
    int32  status         = 2;
    int64  createTime     = 3;
    int64  prepareTime    = 4;
    int64  delayPeriod    = 5;
}

message Retrieve {
    // used as key
    string   backupAddress        = 1;
    repeated RetrievePara retPara = 2;
}

message RetrieveAction {
    oneof value {
        PreRetrieve     preRet  = 1;
        PerformRetrieve perfRet = 2;
        BackupRetrieve  backup  = 3;
        CancelRetrieve  cancel  = 4;
    }
    int32 ty = 5;
}

message BackupRetrieve {
    string backupAddress  = 1;
    string defaultAddress = 2;
    int64  delayPeriod    = 3;
}

message PreRetrieve {
    string backupAddress  = 1;
    string defaultAddress = 2;
}

message PerformRetrieve {
    string backupAddress  = 1;
    string defaultAddress = 2;
}

message CancelRetrieve {
    string backupAddress  = 1;
    string defaultAddress = 2;
}

message ReqRetrieveInfo {
    string backupAddress  = 1;
    string defaultAddress = 2;
}

message RetrieveQuery {
    string backupAddress  = 1;
    string defaultAddress = 2;
    int64  delayPeriod    = 3;
    int64  prepareTime    = 4;
    int64  remainTime     = 5;
    int32  status         = 6;
}
// message for retrieve end